--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,11 @@ Flask-Cors==3.0.10
 flask-restplus==0.13.0
 word2number~=1.1
 setuptools~=41.2.0
-numpy~=1.20.3
+numpy~=1.19.5
 imblearn~=0.0
 gensim~=3.8.3
 Keras~=2.4.3
 tensorflow==2.5.0
+num2words~=0.5.10
+spacy~=3.0.6
+geotext~=0.4.0
