--- a/ConfigFile.properties
+++ b/ConfigFile.properties
@@ -23,6 +23,14 @@ oversampling.Tfidf.mlp=Tfidf_mlp_over_sampling
 oversampling.Tfidf.dt=Tfidf_decision_tree_over_sampling
 oversampling.Tfidf.k_neighbors=Tfidf_k_neighbors_over_sampling
 
+under_sampling.Tfidf.bow=Tfidf_under_sampling
+under_sampling.Tfidf.lg=Tfidf_logistic_regression_under_sampling
+under_sampling.Tfidf.svm=Tfidf_svm_under_sampling
+under_sampling.Tfidf.gaussian=Tfidf_gaussian_under_sampling
+under_sampling.Tfidf.mlp=Tfidf_mlp_under_sampling
+under_sampling.Tfidf.dt=Tfidf_decision_tree_under_sampling
+under_sampling.Tfidf.k_neighbors=Tfidf_k_neighbors_under_sampling
+
 oversampling.word2vec.word2vec=word2vec_over_sampling
 oversampling.word2vec.lg=word2vec_logistic_regression_over_sampling
 oversampling.word2vec.svm=word2vec_svm_over_sampling
