word2vec implementation

--- a/ConfigFile.properties
+++ b/ConfigFile.properties
@@ -49,6 +49,11 @@ under_sampling.word2vec.k_neighbors=word2vec_k_neighbors_under_sampling
 
 [STR]
 target.column=sentiment
+data.over.sampling=over_sampling
+data.under.sampling=under_sampling
+word.embedding.tfidf=tfidf
+word.embedding.word2vec=word2vec
+word.embedding.bow=bow
 
 
 [MODELNAME]
