model tuning, minor refactor, add comments

--- a/ConfigFile.properties
+++ b/ConfigFile.properties
@@ -50,6 +50,7 @@ under_sampling.word2vec.k_neighbors=word2vec_k_neighbors_under_sampling
 
 [STR]
 target.column=sentiment
+text.column=text
 data.over.sampling=over_sampling
 data.under.sampling=under_sampling
 word.embedding.tfidf=tfidf
